--- a/index.html
+++ b/index.html
@@ -72,6 +72,51 @@
                 <img src="./images/Rectangle 1.png" alt="">
             </div>
         </section>
+        <section class="language-icons secondary-width">
+            <div class="language-icons-container-text">
+                <h3 class="text-title">My Next Target</h3>
+                <p class="text-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.
+                </p>
+            </div>
+            <div class="language-icons-container">
+                <div class="language-icon-container">
+                    <div class="language-icon-image"><img src="./images/react.png" alt=""></div>
+                    <div class="language-icon-text">
+                       <h4>ReactJS</h4>
+                       <p class="text-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                       <a href="">Learn More</a>
+                    </div>
+                </div>
+                <div class="language-icon-container margin-t-b">
+                    <div class="language-icon-image"><img src="./images/nodejs.png" alt=""></div>
+                    <div class="language-icon-text">
+                        <h4>NodeJs</h4>
+                       <p class="text-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                       <a href="">Learn More</a>
+  
+                    </div>
+                </div>
+                <div class="language-icon-container">
+                    <div class="language-icon-image"><img src="./images/mongodb.png" alt=""></div>
+                    <div class="language-icon-text">
+                        <h4>MongoDB</h4>
+                       <p class="text-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                       <a href="">Learn More</a>
+
+                    </div>
+                </div>
+
+            </div>
+        </section>
+        <section class="handsek-section secondary-width">
+            <div class="handsek-container">
+                <h3 class="text-title">I need Support</h3>
+                <p class="text-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <div class="write-text">
+                    <input type="text" name="" id="" placeholder="Suggest me any feedback for me"><button>Submit</button>
+                </div>
+            </div>
+        </section>
           
     </main>
     <footer class="main-width">
