all section end

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="development-section-container">
                 <div class="development-section-text">
                     <h1 class="text-title">Why Web Development??</h1>
-                    <p class="text-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's <br>standard dummy text.</p>
+                    <p class="text-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
                 </div>
                 <div>
                     <div class="image-text">
@@ -66,11 +66,42 @@
         <section class="vai-section secondary-width">
             <div class="vai-section-text">
                 <h3 class="text-title">My Inspiration</h3>
-                <p class="text-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's <br>standard dummy text.</p>
+                <p class="text-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
             </div>
             <div class="vai-section-image">
                 <img src="./images/Rectangle 1.png" alt="">
             </div>
+        </section>
+        
+        <section class="current-section secondary-width">
+            <div class="current-section-container-text">
+                <h3 class="text-title">My Current Target</h3>
+                <p class="text-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.
+
+                </p>
+            </div>
+            <div class="current-images-icons-container">
+                <div class="current-image-icon html">
+                    <img src="./images/html.png" alt="">
+                    <h4>HTML</h4>
+                    <p class="text-description">Lorem Ipsum is simply dummy text of the printing.</p>
+                    <a href="">Learn More</a>
+                </div>
+                <div class="current-image-icon css">
+                    <img src="./images/css.png" alt="">
+                    <h4>CSS</h4>
+                    <p class="text-description">Lorem Ipsum is simply dummy text of the printing.</p>
+                    <a href="">Learn More</a>
+                </div>
+                <div class="current-image-icon js">
+                    <img src="./images/js.png" alt="">
+                    <h4>JavaScript</h4>
+                    <p class="text-description">Lorem Ipsum is simply dummy text of the printing.</p>
+                    <a href="">Learn More</a>
+                </div>
+            </div>
+
+            
         </section>
         <section class="language-icons secondary-width">
             <div class="language-icons-container-text">
