change dami text

--- a/index.html
+++ b/index.html
@@ -76,28 +76,27 @@
         <section class="current-section secondary-width">
             <div class="current-section-container-text">
                 <h3 class="text-title">My Current Target</h3>
-                <p class="text-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.
-
+                <p class="text-description">learning HTML and CSS which  are most important for a developer.Practice more and more.
                 </p>
             </div>
             <div class="current-images-icons-container">
                 <div class="current-image-icon html">
                     <img src="./images/html.png" alt="">
                     <h4>HTML</h4>
-                    <p class="text-description">Lorem Ipsum is simply dummy text of the printing.</p>
-                    <a href="">Learn More</a>
+                    <p class="text-description">it is a markup language</p>
+                    <a href="https://www.w3schools.com/html/default.asp">Learn More</a>
                 </div>
                 <div class="current-image-icon css">
                     <img src="./images/css.png" alt="">
                     <h4>CSS</h4>
-                    <p class="text-description">Lorem Ipsum is simply dummy text of the printing.</p>
-                    <a href="">Learn More</a>
+                    <p class="text-description">Create beautiful website design.</p>
+                    <a href="https://www.w3schools.com/css/default.asp">Learn More</a>
                 </div>
                 <div class="current-image-icon js">
                     <img src="./images/js.png" alt="">
                     <h4>JavaScript</h4>
-                    <p class="text-description">Lorem Ipsum is simply dummy text of the printing.</p>
-                    <a href="">Learn More</a>
+                    <p class="text-description">It is script language</p>
+                    <a href="https://www.w3schools.com/js/default.asp">Learn More</a>
                 </div>
             </div>
 
@@ -142,9 +141,9 @@
         <section class="handsek-section secondary-width">
             <div class="handsek-container">
                 <h3 class="text-title">I need Support</h3>
-                <p class="text-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <p class="text-description">I am begainer.So,I facing many problem.</p>
                 <div class="write-text">
-                    <input type="text" name="" id="" placeholder="Suggest me any feedback for me"><button>Submit</button>
+                    <input type="text" name="" id="" placeholder="Suggest me any feedback for me"><button type="submit">Submit</button>
                 </div>
             </div>
         </section>
@@ -156,17 +155,13 @@
                 <h5>An Open Commitment by Awlad Hossain</h5>
             </div>
             <div class="footer-icon">
-                <img src="./images/facebook.png" alt=""><img src="./images/github.png" alt=""><img src="./images/linkedin-icon 1.png" alt="">
+                <a href=""><img src="./images/facebook.png" alt=""></a>
+                <a href=""><img src="./images/github.png" alt=""></a>
+                <a href=""><img src="./images/linkedin-icon 1.png" alt=""></a>
+                
             </div>
          </section>
     </footer>
     
 </body>
 </html>
-<!-- echo "# assignment-1-solution" >> README.md
-git init
-git add README.md
-git commit -m "first commit"
-git branch -M main
-git remote add origin https://github.com/n-a-riyal/assignment-1-solution.git
-git push -u origin main -->
